syntax = "proto3";

package buildbarn.configuration.bb_event_service;

import "pkg/proto/configuration/blobstore/blobstore.proto";
import "pkg/proto/configuration/bb_storage/bb_storage.proto";

option go_package = "github.com/buildbarn/bb-event-service/pkg/proto/configuration/bb_event_service";

message EventServiceConfiguration {
  // Blobstore configuration for the bb-storage instance.
  buildbarn.configuration.blobstore.BlobstoreConfiguration blobstore = 1;

  // Address on which to listen to expose Prometheus metrics. Defaults to ":80".
  string metrics_listen_address = 2;

  // Address on which to listen for RPCs. Defaults to ":8983".
  string grpc_listen_address = 3;

  // Maximum Protobuf message size to unmarshal.
  int64 maximum_message_size_bytes = 4;
}
